trunk/Archive2/f3/11c86c970cf364/output
main.cpp:1:9: error: expected constructor, destructor, or type conversion before '(' token
  Setting(Setting* instance){
         ^
