trunk/Archive2/f3/11c86c970cf364/main.cpp
 Setting(Setting* instance){
    	f1();
        f2();
        ///....
	};